승점 점수 40% 번역완료

--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -72,7 +72,7 @@ VICTORY_POINTS_1145:0 "알제"
 VICTORY_POINTS_1149:0 "트리폴리"
 VICTORY_POINTS_1150:0 "다롄"
 VICTORY_POINTS_1170:0 "라시오"
-VICTORY_POINTS_1181:0 "Costermansstadt"
+VICTORY_POINTS_1181:0 "코스터맨스스타드"
 VICTORY_POINTS_1182:0 "도쿄"
 VICTORY_POINTS_1208:0 "쿠칭"
 VICTORY_POINTS_1221:0 "바탕가스"
@@ -128,136 +128,136 @@ VICTORY_POINTS_1950:0 "보요맨"
 VICTORY_POINTS_1951:0 "로메"
 VICTORY_POINTS_1965:0 "멕시코 시티"
 VICTORY_POINTS_1969:0 "카치나"
-VICTORY_POINTS_1984:0 "Gondar"
-VICTORY_POINTS_1990:0 "Chiang Rai"
-VICTORY_POINTS_2023:0 "Medellin"
-VICTORY_POINTS_2024:0 "Luluaburg"
-VICTORY_POINTS_2026:0 "Isfahan"
-VICTORY_POINTS_2038:0 "Freetown"
-VICTORY_POINTS_2038:0 "Freistadt"
-VICTORY_POINTS_2041:1 "Srinagar"
-VICTORY_POINTS_2045:0 "Tianshui"
-VICTORY_POINTS_2050:0 "Lagos"
-VICTORY_POINTS_2056:0 "Niamey"
-VICTORY_POINTS_2086:0 "Delhi"
-VICTORY_POINTS_2089:0 "Basra"
-VICTORY_POINTS_2097:0 "Bağdat"
-VICTORY_POINTS_2152:0 "Asunción"
-VICTORY_POINTS_2189:0 "Hobart"
-VICTORY_POINTS_2196:0 "Dar es Salaam"
-VICTORY_POINTS_2197:0 "Christchurch"
-VICTORY_POINTS_2210:0 "Arequipa"
-VICTORY_POINTS_2211:0 "Dunedin"
-VICTORY_POINTS_2220:0 "Usumbura"
-VICTORY_POINTS_2489:0 "Truk"
-VICTORY_POINTS_3010:0 "Edmonton"
-VICTORY_POINTS_3022:0 "Trondheim"
-VICTORY_POINTS_3083:0 "Turku"
+VICTORY_POINTS_1984:0 "곤다르"
+VICTORY_POINTS_1990:0 "치앙라이"
+VICTORY_POINTS_2023:0 "메델린"
+VICTORY_POINTS_2024:0 "룰라부르크"
+VICTORY_POINTS_2026:0 "이스파한"
+VICTORY_POINTS_2038:0 "프리타운"
+VICTORY_POINTS_2038:0 "프레이스타드"
+VICTORY_POINTS_2041:1 "스리나가르"
+VICTORY_POINTS_2045:0 "텐슈이"
+VICTORY_POINTS_2050:0 "라고스"
+VICTORY_POINTS_2056:0 "니아메"
+VICTORY_POINTS_2086:0 "델리"
+VICTORY_POINTS_2089:0 "바사"
+VICTORY_POINTS_2097:0 "바그다드"
+VICTORY_POINTS_2152:0 "아순시온"
+VICTORY_POINTS_2189:0 "호바트"
+VICTORY_POINTS_2196:0 "다르에스살람"
+VICTORY_POINTS_2197:0 "크리스트처치"
+VICTORY_POINTS_2210:0 "아레키파"
+VICTORY_POINTS_2211:0 "더니든"
+VICTORY_POINTS_2220:0 "우숨브라"
+VICTORY_POINTS_2489:0 "트루크"
+VICTORY_POINTS_3010:0 "에드먼턴"
+VICTORY_POINTS_3022:0 "트론헤임"
+VICTORY_POINTS_3083:0 "투르쿠"
 VICTORY_POINTS_3122:0 "바사"
-VICTORY_POINTS_3134:0 "Murmansk"
+VICTORY_POINTS_3134:0 "무르만스크"
 VICTORY_POINTS_3137:0 "탐페레"
-VICTORY_POINTS_3140:0 "Tikhvin"
-VICTORY_POINTS_3151:0 "Petrograd"
-VICTORY_POINTS_3152:0 "Reval"
-VICTORY_POINTS_3211:0 "Den Haag"
-VICTORY_POINTS_3273:0 "Glasgow"
+VICTORY_POINTS_3140:0 "티흐빈"
+VICTORY_POINTS_3151:0 "페트로그라드"
+VICTORY_POINTS_3152:0 "레발"
+VICTORY_POINTS_3211:0 "덴하그"
+VICTORY_POINTS_3273:0 "글래스고"
 VICTORY_POINTS_3320:0 "빌뉴스"
-VICTORY_POINTS_3325:0 "Odense"
-VICTORY_POINTS_3326:0 "Bremen"
-VICTORY_POINTS_3335:0 "Bryansk"
-VICTORY_POINTS_3338:0 "Archangelsk"
+VICTORY_POINTS_3325:0 "오덴세"
+VICTORY_POINTS_3326:0 "브레멘"
+VICTORY_POINTS_3335:0 "브랸스크"
+VICTORY_POINTS_3338:0 "아르한겔스크"
 VICTORY_POINTS_3369:0 "브리스톨"
-VICTORY_POINTS_3379:0 "Belfast"
-VICTORY_POINTS_3392:0 "Berestya"
-VICTORY_POINTS_3393:0 "Gardinas"
-VICTORY_POINTS_3396:0 "Galway"
-VICTORY_POINTS_3456:0 "Karachi"
+VICTORY_POINTS_3379:0 "벨파스트"
+VICTORY_POINTS_3392:0 "베레스티야"
+VICTORY_POINTS_3393:0 "흐르드나"
+VICTORY_POINTS_3396:0 "갈웨이"
+VICTORY_POINTS_3456:0 "카라치"
 VICTORY_POINTS_3501:0 "도버"
 VICTORY_POINTS_3513:0 "포틀랜드"
-VICTORY_POINTS_3516:0 "Namur"
-VICTORY_POINTS_3522:0 "Magdeburg"
-VICTORY_POINTS_3529:0 "Tsaritsyn"
-VICTORY_POINTS_3535:0 "Leipzig"
-VICTORY_POINTS_3544:0 "Warszawa"
-VICTORY_POINTS_3550:0 "Eperjes"
+VICTORY_POINTS_3516:0 "나무르"
+VICTORY_POINTS_3522:0 "마그데부르크"
+VICTORY_POINTS_3529:0 "차리친"
+VICTORY_POINTS_3535:0 "라이프치히"
+VICTORY_POINTS_3544:0 "바르샤바"
+VICTORY_POINTS_3550:0 "에페리에시"
 VICTORY_POINTS_3552:0 "브레스트"
 VICTORY_POINTS_3569:0 "브르노"
-VICTORY_POINTS_3578:0 "Saratov"
+VICTORY_POINTS_3578:0 "사라토프"
 VICTORY_POINTS_3580:0 "쿠르스크"
-VICTORY_POINTS_3594:0 "Vichy"
-VICTORY_POINTS_3651:0 "Ngapali"
-VICTORY_POINTS_3652:0 "Dijon"
-VICTORY_POINTS_3653:0 "Batumi"
-VICTORY_POINTS_3663:0 "Ploiesti"
-VICTORY_POINTS_3671:0 "Tours"
+VICTORY_POINTS_3594:0 "비시"
+VICTORY_POINTS_3651:0 "나팔리"
+VICTORY_POINTS_3652:0 "디종"
+VICTORY_POINTS_3653:0 "바투미"
+VICTORY_POINTS_3663:0 "플로이에슈티"
+VICTORY_POINTS_3671:0 "투르"
 VICTORY_POINTS_3672:0 "그로즈니"
 VICTORY_POINTS_3686:0 "세바스토폴"
-VICTORY_POINTS_3700:0 "Pozsony"
-VICTORY_POINTS_3706:0 "Calgary"
-VICTORY_POINTS_3707:0 "Chisinău"
-VICTORY_POINTS_3720:0 "Maikop"
-VICTORY_POINTS_3734:0 "Yekaterinodar"
-VICTORY_POINTS_3768:0 "Grenoble"
+VICTORY_POINTS_3700:0 "포조니"
+VICTORY_POINTS_3706:0 "캘거리"
+VICTORY_POINTS_3707:0 "키시너우"
+VICTORY_POINTS_3720:0 "마이코프"
+VICTORY_POINTS_3734:0 "예카테리노다르"
+VICTORY_POINTS_3768:0 "그르노블"
 VICTORY_POINTS_3775:0 "토론토"
 VICTORY_POINTS_3778:0 "오타와"
 VICTORY_POINTS_3780:0 "밀라노"
-VICTORY_POINTS_3816:0 "Zaragoza"
-VICTORY_POINTS_3838:0 "Ajáccio"
-VICTORY_POINTS_3878:0 "뉴욕시"
-VICTORY_POINTS_3882:0 "Skopje"
-VICTORY_POINTS_3893:0 "Edirne"
-VICTORY_POINTS_3920:0 "León"
-VICTORY_POINTS_3924:0 "Split"
+VICTORY_POINTS_3816:0 "사라고사"
+VICTORY_POINTS_3838:0 "아작시오"
+VICTORY_POINTS_3878:0 "뉴욕"
+VICTORY_POINTS_3882:0 "스코페"
+VICTORY_POINTS_3893:0 "에디르네"
+VICTORY_POINTS_3920:0 "레옹"
+VICTORY_POINTS_3924:0 "스플리트"
 VICTORY_POINTS_3938:0 "마드리드"
 VICTORY_POINTS_3957:0 "워싱턴"
 VICTORY_POINTS_3960:0 "달라스"
 VICTORY_POINTS_3980:0 "플로리나"
-VICTORY_POINTS_3986:0 "Toledo"
-VICTORY_POINTS_3992:0 "Nanchang"
-VICTORY_POINTS_3995:0 "Saipan"
-VICTORY_POINTS_3999:0 "Hakha"
-VICTORY_POINTS_4014:0 "Catania"
+VICTORY_POINTS_3986:0 "톨레도"
+VICTORY_POINTS_3992:0 "난창"
+VICTORY_POINTS_3995:0 "사이판"
+VICTORY_POINTS_3999:0 "하카"
+VICTORY_POINTS_4014:0 "카타리나"
 VICTORY_POINTS_4052:0 "헤이조" #Pyongyang
 VICTORY_POINTS_4056:0 "부산" #Pusan/Busan
 VICTORY_POINTS_4075:0 "하노이"
 VICTORY_POINTS_4076:0 "알렉산드리아"
-VICTORY_POINTS_4102:0 "Kagoshima"
-VICTORY_POINTS_4109:0 "Athína"
-VICTORY_POINTS_4111:0 "Şam"
-VICTORY_POINTS_4112:0 "İzmir"
-VICTORY_POINTS_4119:0 "Hai Phong"
-VICTORY_POINTS_4135:0 "Gibraltar"
-VICTORY_POINTS_4159:0 "Messina"
-VICTORY_POINTS_4180:0 "Honolulu"
-VICTORY_POINTS_4189:0 "Macau"
-VICTORY_POINTS_4196:0 "Fuzhou"
-VICTORY_POINTS_4206:0 "Tel Aviv"
-VICTORY_POINTS_4226:0 "Buin"
-VICTORY_POINTS_4241:0 "Davao"
-VICTORY_POINTS_4245:0 "Calcutta"
-VICTORY_POINTS_4268:0 "Noumea"
-VICTORY_POINTS_4275:0 "Marit" #Myeik
-VICTORY_POINTS_4286:0 "Suva"
-VICTORY_POINTS_4288:0 "Calapan"
-VICTORY_POINTS_4302:0 "Siam Nakhon" #Siemreap
-VICTORY_POINTS_4312:0 "Nakhon Si Thammarat"
-VICTORY_POINTS_4318:0 "Putao"
-VICTORY_POINTS_4329:0 "Port Moresby"
-VICTORY_POINTS_4333:0 "Akmolinsk"
-VICTORY_POINTS_4344:0 "Mysore"
-VICTORY_POINTS_4345:0 "Montréal"
-VICTORY_POINTS_4348:0 "Kanchanaburi"
-VICTORY_POINTS_4357:0 "North Palau"
-VICTORY_POINTS_4363:0 "Pleiku"
-VICTORY_POINTS_4379:0 "Hue"
-VICTORY_POINTS_4397:0 "Vinh"
-VICTORY_POINTS_4401:0 "Saigon"
-VICTORY_POINTS_4405:0 "Nha Trang"
-VICTORY_POINTS_4424:0 "Johor Bahru"
-VICTORY_POINTS_4425:0 "Myitkyina"
-VICTORY_POINTS_4433:0 "Sattahip" # Chonburi
-VICTORY_POINTS_4459:0 "Gorakhpur"
-VICTORY_POINTS_4464:0 "Biloxi"
+VICTORY_POINTS_4102:0 "카고시마"
+VICTORY_POINTS_4109:0 "아테네"
+VICTORY_POINTS_4111:0 "셈"
+VICTORY_POINTS_4112:0 "이즈미르"
+VICTORY_POINTS_4119:0 "하이퐁"
+VICTORY_POINTS_4135:0 "지브롤터"
+VICTORY_POINTS_4159:0 "메시나"
+VICTORY_POINTS_4180:0 "호놀룰루"
+VICTORY_POINTS_4189:0 "마카오"
+VICTORY_POINTS_4196:0 "푸저우"
+VICTORY_POINTS_4206:0 "텔압브"
+VICTORY_POINTS_4226:0 "부인"
+VICTORY_POINTS_4241:0 "다바오"
+VICTORY_POINTS_4245:0 "콜카타"
+VICTORY_POINTS_4268:0 "누메아"
+VICTORY_POINTS_4275:0 "마리트" #Myeik
+VICTORY_POINTS_4286:0 "수바"
+VICTORY_POINTS_4288:0 "칼라판"
+VICTORY_POINTS_4302:0 "시암 나콘" #Siemreap
+VICTORY_POINTS_4312:0 "나콘시타마라트"
+VICTORY_POINTS_4318:0 "푸타오"
+VICTORY_POINTS_4329:0 "포트 모르즈비"
+VICTORY_POINTS_4333:0 "아크몰린스크"
+VICTORY_POINTS_4344:0 "마이소르"
+VICTORY_POINTS_4345:0 "몬트리올"
+VICTORY_POINTS_4348:0 "깐차나부리"
+VICTORY_POINTS_4357:0 "북부 팔라우"
+VICTORY_POINTS_4363:0 "플래이꾸"
+VICTORY_POINTS_4379:0 "후에"
+VICTORY_POINTS_4397:0 "빈"
+VICTORY_POINTS_4401:0 "사이공"
+VICTORY_POINTS_4405:0 "나트랑"
+VICTORY_POINTS_4424:0 "조흐루"
+VICTORY_POINTS_4425:0 "미치나"
+VICTORY_POINTS_4433:0 "사타힙" # Chonburi
+VICTORY_POINTS_4459:0 "고라크푸르"
+VICTORY_POINTS_4464:0 "빌록시"
 VICTORY_POINTS_4504:0 "Guiyang"
 VICTORY_POINTS_4512:0 "Diyarbakır"
 VICTORY_POINTS_4516:0 "Patna"
@@ -273,20 +273,20 @@ VICTORY_POINTS_4639:0 "Kampong Cham"
 VICTORY_POINTS_4641:0 "Port-au-Prince"
 VICTORY_POINTS_4652:0 "Medan"
 VICTORY_POINTS_4654:0 "Loikaw"
-VICTORY_POINTS_4696:0 "Port Elizabeth"
+VICTORY_POINTS_4696:0 "포트 엘리자베스"
 VICTORY_POINTS_4709:0 "Dihua"
 VICTORY_POINTS_4724:0 "Krasnoyarsk"
 VICTORY_POINTS_4739:0 "Saskatoon"
 VICTORY_POINTS_4797:0 "Irkutsk"
-VICTORY_POINTS_4801:0 "Urga"
-VICTORY_POINTS_4860:0 "Great Falls"
+VICTORY_POINTS_4801:0 "우르가"
+VICTORY_POINTS_4860:0 "그레이트 폴스"
 VICTORY_POINTS_4865:0 "Salt Lake City"
 VICTORY_POINTS_4872:0 "Winnipeg"
 VICTORY_POINTS_4879:0 "Windhoek"
 VICTORY_POINTS_4883:0 "Nagpur"
-VICTORY_POINTS_4893:0 "Herat"
+VICTORY_POINTS_4893:0 "헤라트"
 VICTORY_POINTS_4915:0 "Agra"
-VICTORY_POINTS_4925:0 "Chengdu"
+VICTORY_POINTS_4925:0 "청두"
 VICTORY_POINTS_4927:0 "Bamako"
 VICTORY_POINTS_4948:0 "Dakar"
 VICTORY_POINTS_4952:0 "Beninstadt"
@@ -297,12 +297,12 @@ VICTORY_POINTS_4997:0 "Maiduguri"
 VICTORY_POINTS_5010:0 "Addis Ababa"
 VICTORY_POINTS_5012:0 "Villa Cisneros"
 VICTORY_POINTS_5029:0 "Mashhad"
-VICTORY_POINTS_5033:0 "Lhasa"
+VICTORY_POINTS_5033:0 "라사"
 VICTORY_POINTS_5034:0 "Noukachott"
 VICTORY_POINTS_5037:0 "Mecca"
 VICTORY_POINTS_5054:0 "Jaunde"
 VICTORY_POINTS_5068:0 "Hargeysa"
-VICTORY_POINTS_5074:0 "Aden"
+VICTORY_POINTS_5074:0 "아덴"
 VICTORY_POINTS_5107:0 "Fortaleza"
 VICTORY_POINTS_5117:0 "Friedrichsburg"
 VICTORY_POINTS_5128:0 "Antananarivo"
@@ -310,36 +310,36 @@ VICTORY_POINTS_5139:0 "Tirpitzburg"
 VICTORY_POINTS_5157:0 "Dehradun"
 VICTORY_POINTS_5168:0 "Récife"
 VICTORY_POINTS_5199:0 "Lusaka"
-VICTORY_POINTS_5210:0 "Mombasa"
+VICTORY_POINTS_5210:0 "몸바사"
 VICTORY_POINTS_5230:0 "La Paz"
-VICTORY_POINTS_6050:0 "Stockholm"
-VICTORY_POINTS_6103:0 "London"
-VICTORY_POINTS_6115:0 "Oslo"
-VICTORY_POINTS_6245:0 "Tver"
-VICTORY_POINTS_6262:0 "Tula"
-VICTORY_POINTS_6282:0 "Stettin"
+VICTORY_POINTS_6050:0 "스톡홀름"
+VICTORY_POINTS_6103:0 "런던"
+VICTORY_POINTS_6115:0 "오슬로"
+VICTORY_POINTS_6245:0 "티버"
+VICTORY_POINTS_6262:0 "툴라"
+VICTORY_POINTS_6282:0 "슈테틴"
 VICTORY_POINTS_6286:0 "Zwolle"
-VICTORY_POINTS_6287:0 "Copenhagen"
-VICTORY_POINTS_6296:0 "Kaunas"
+VICTORY_POINTS_6287:0 "코펜하겐"
+VICTORY_POINTS_6296:0 "카우나스"
 VICTORY_POINTS_6300:0 "Rosyth"
 VICTORY_POINTS_6313:0 "Limerick"
-VICTORY_POINTS_6318:0 "Manchester"
-VICTORY_POINTS_6332:0 "Königsberg"
+VICTORY_POINTS_6318:0 "맨체스터"
+VICTORY_POINTS_6332:0 "쾨니히스베르크"
 VICTORY_POINTS_6338:0 "Kazan"
 VICTORY_POINTS_6364:0 "Aarhus"
-VICTORY_POINTS_6377:0 "Hannover"
-VICTORY_POINTS_6380:0 "Moskva"
-VICTORY_POINTS_6384:0 "Liverpool"
+VICTORY_POINTS_6377:0 "하노버"
+VICTORY_POINTS_6380:0 "모스크바"
+VICTORY_POINTS_6384:0 "리버풀"
 VICTORY_POINTS_6389:0 "Kiel"
 VICTORY_POINTS_6418:0 "Plzeň"
 VICTORY_POINTS_6449:0 "Cherbourg"
 VICTORY_POINTS_6469:0 "에센"
 VICTORY_POINTS_6474:0 "Yuzivka"
-VICTORY_POINTS_6488:0 "Frankfurt"
+VICTORY_POINTS_6488:0 "프랑크푸르트"
 VICTORY_POINTS_6496:0 "Eindhoven"
 VICTORY_POINTS_6521:0 "베를린"
-VICTORY_POINTS_6524:0 "Erfurt"
-VICTORY_POINTS_6536:0 "Lorient"
+VICTORY_POINTS_6524:0 "에르푸르트"
+VICTORY_POINTS_6536:0 "로리엔트"
 VICTORY_POINTS_6558:0 "포젠"
 VICTORY_POINTS_6560:0 "겐트"
 VICTORY_POINTS_6573:0 "Kosice"
@@ -371,7 +371,7 @@ VICTORY_POINTS_6973:0 "La Spezia"
 VICTORY_POINTS_6984:0 "Baltimore"
 VICTORY_POINTS_6994:0 "Aomori"
 VICTORY_POINTS_6999:0 "충칭"
-VICTORY_POINTS_7011:0 "Cairo"
+VICTORY_POINTS_7011:0 "카이로"
 VICTORY_POINTS_7014:0 "Shanghai"
 VICTORY_POINTS_7015:0 "Bac Giang"
 VICTORY_POINTS_7034:0 "Magwe"
@@ -379,8 +379,8 @@ VICTORY_POINTS_7069:0 "Casablanca"
 VICTORY_POINTS_7071:0 "Xiamen"
 VICTORY_POINTS_7072:0 "오스카"
 VICTORY_POINTS_7087:0 "Shizuoka"
-VICTORY_POINTS_7097:0 "Changsha"
-VICTORY_POINTS_7101:0 "Changde"
+VICTORY_POINTS_7097:0 "창샤"
+VICTORY_POINTS_7101:0 "창더"
 VICTORY_POINTS_7125:0 "경성" #Seoul/Gyeongseong
 VICTORY_POINTS_7132:0 "Oran"
 VICTORY_POINTS_7137:0 "난닝"
@@ -397,10 +397,10 @@ VICTORY_POINTS_7222:0 "Hefei"
 VICTORY_POINTS_7236:0 "Hat Yai"
 VICTORY_POINTS_7251:0 "Rabaul"
 VICTORY_POINTS_7254:0 "Pathein" #Bassein
-VICTORY_POINTS_7259:0 "Victoria"
-VICTORY_POINTS_7274:0 "Novosibirsk"
-VICTORY_POINTS_7302:0 "Suva"
-VICTORY_POINTS_7315:0 "Seattle"
+VICTORY_POINTS_7259:0 "빅토리아"
+VICTORY_POINTS_7274:0 "노보시비르스크"
+VICTORY_POINTS_7302:0 "수바"
+VICTORY_POINTS_7315:0 "시애틀"
 VICTORY_POINTS_7329:0 "Kota Bharu"
 VICTORY_POINTS_7340:0 "Yannam"
 VICTORY_POINTS_7344:0 "콜롬보"
@@ -409,7 +409,7 @@ VICTORY_POINTS_7370:0 "Aktyubinsk"
 VICTORY_POINTS_7371:0 "Bandar Brunei"
 VICTORY_POINTS_7375:0 "Perm"
 VICTORY_POINTS_7376:0 "Phnom Penh"
-VICTORY_POINTS_7381:0 "Batavia"
+VICTORY_POINTS_7381:0 "바타비아"
 VICTORY_POINTS_7394:0 "Cork"
 VICTORY_POINTS_7402:0 "Trivandrum"
 VICTORY_POINTS_7408:0 "Krungthep Maha Nakhon" #Bangkok
@@ -432,7 +432,7 @@ VICTORY_POINTS_7621:0 "Mar del Plata"
 VICTORY_POINTS_7622:0 "아바나"
 VICTORY_POINTS_7630:0 "파나마 시티"
 VICTORY_POINTS_7645:0 "Stung Treng" #Chiang Taeng/Xiang Taeng
-VICTORY_POINTS_7660:0 "Santo Domingo"
+VICTORY_POINTS_7660:0 "산토 도밍고"
 VICTORY_POINTS_7661:0 "Bakü"
 VICTORY_POINTS_7669:0 "Darwin"
 VICTORY_POINTS_7798:0 "Melbourne"
@@ -453,7 +453,7 @@ VICTORY_POINTS_8011:0 "Bangalore"
 VICTORY_POINTS_8049:0 "Yan'an"
 VICTORY_POINTS_8085:0 "쿠웨이트 시티"
 VICTORY_POINTS_8087:0 "Hyderabad"
-VICTORY_POINTS_8098:0 "Quetta"
+VICTORY_POINTS_8098:0 "퀘타"
 VICTORY_POINTS_8106:0 "Lahore"
 VICTORY_POINTS_8111:0 "El Aaiún"
 VICTORY_POINTS_8113:0 "Caracas"
@@ -505,9 +505,9 @@ VICTORY_POINTS_9620:0 "Bern"
 VICTORY_POINTS_9627:0 "Laibach"
 VICTORY_POINTS_9635:0 "Constanta"
 VICTORY_POINTS_9642:0 "Besançon"
-VICTORY_POINTS_9660:0 "Budapest"
-VICTORY_POINTS_9671:0 "San Francisco"
-VICTORY_POINTS_9679:0 "Graz"
+VICTORY_POINTS_9660:0 "부다페스트"
+VICTORY_POINTS_9671:0 "샌 프란시스코"
+VICTORY_POINTS_9679:0 "그라즈"
 VICTORY_POINTS_9713:0 "Sacramento"
 VICTORY_POINTS_9716:0 "Iasi"
 VICTORY_POINTS_9737:0 "Bordeaux"
@@ -520,7 +520,7 @@ VICTORY_POINTS_9814:0 "Los Angeles"
 VICTORY_POINTS_9817:0 "Porto"
 VICTORY_POINTS_9832:0 "Providence"
 VICTORY_POINTS_9833:0 "Kostantiniyye"
-VICTORY_POINTS_9843:0 "Beijing"
+VICTORY_POINTS_9843:0 "베이징"
 VICTORY_POINTS_9893:0 "Antep"
 VICTORY_POINTS_9898:0 "Montpellier"
 VICTORY_POINTS_9904:0 "로마"
@@ -533,7 +533,7 @@ VICTORY_POINTS_9945:1 "세우타"
 VICTORY_POINTS_9950:0 "나가사키"
 VICTORY_POINTS_9958:0 "Zhengzhou"
 VICTORY_POINTS_9962:0 "Nyanza"
-VICTORY_POINTS_9974:0 "Ningbo"
+VICTORY_POINTS_9974:0 "닝보"
 VICTORY_POINTS_9975:0 "Ahmadabad"
 VICTORY_POINTS_9979:0 "Malaga"
 VICTORY_POINTS_9990:0 "Reggio di Calabria"
@@ -749,9 +749,9 @@ VICTORY_POINTS_12989:0 "Kampala"
 VICTORY_POINTS_12991:0 "Mogadishu"
 VICTORY_POINTS_12997:0 "Lima"
 VICTORY_POINTS_13011:0 "Reims"
-VICTORY_POINTS_13021:0 "Tarawa"
-VICTORY_POINTS_13025:0 "Motoyama"
-VICTORY_POINTS_13028:0 "Yap"
+VICTORY_POINTS_13021:0 ""
+VICTORY_POINTS_13025:0 "모토야마"
+VICTORY_POINTS_13028:0 "야프"
 VICTORY_POINTS_13038:0 "나우루"
 VICTORY_POINTS_13041:0 "콰잘렌"
 VICTORY_POINTS_13046:0 "에니웨톡"
