--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -490,10 +490,10 @@ aus.elections.1.a:0 "국민들이 결정할것이다."
 aus.elections.2.t:0 "학교 설립 & SDAP 집회"
 aus.elections.2.d:0 "오스트리아와 오스트리아의 경제 상황이 잠시 동안 끔찍 했음에도 불구하고 CS와 SDAP가 여전히 지배 구조에 협력했을 때 대타협 이후 첫 해에는 교육과 복지에 대한 광범위한 개혁이 있었습니다. 전문직 종사자들을 위한 학원 건설을 시작했고, 연금이 도입되었고, 아동 노동은 모두 제거되었습니다. 빈은 사회주의의 선두 주자로 여겨졌습니다. \n\n오늘, 빈의 아홉 번째 지구에 ​새로운 학원 개설되었고, SDAP는 이 그들의 주요 성공중 하나로 여기​고 있습니다. 다양한 정치인들의 많은 연설이 열리고 있고, Karl Renner는 항상 배경에 서 있었습니다. \n\nRenner는 Burgfrieden의 정치와 왕가와의 협력으로 대타협기간에서 황제의 선의를 이끌어낸 이후로 당에 도움되는 당대표였습니다."
 aus.elections.2.a:0 "그들의 노력은 칭찬받을 만하다."
-aus.elections.2.b:0 "I'd prefer it if they didn't claim the successes of a joint government as their own."
+aus.elections.2.b:0 "만약 그들이 공동 정부의 성공을 자신들의 것으로서 주장하지 않는다면 나는 그것을 좋아할 것이다."
 
 aus.elections.3.t:0 "애들러는 SDAP를 비난합니다"
-aus.elections.3.d:0 "SDAP의 전임 당대표의 아들이자 대타협의 항의 시위로 Graf Stürgkh를 향 총격 사건으로 유명한 급진 사회 주의자의 아들 인 프리드리히 애들러 (Friedrich Adler)는 SDAP를 "기성 권력 조직에 단지 봉사하고있는 사회주의의 종류 "이라고 비난했다."
+aus.elections.3.d:0 "SDAP의 전임 당대표의 아들이자 대타협의 항의 시위로 Graf Stürgkh를 향 총격 사건으로 유명한 급진 사회 주의자의 아들 인 프리드리히 애들러는 SDAP를 "기성 권력 조직에 단지 봉사하고있는 사회주의의 종류 "이라고 비난했다."
 aus.elections.3.a:0 "Radicals will be Radicals."
 
 aus.elections.4.t:0 "CS(기독교 사회당)의 사냥 모임으로의 초대"
@@ -548,10 +548,10 @@ austria.11.a:0 "우리는 끝까지갈것이다."
 
 austria.12.t:0 "오스트리아 신디칼리즘의 항복"
 austria.12.d:0 "약화된 오스트리아의 주들 우리의 모든 경제적, 정치적 요구를 받아 들여야했으며, 그 과정에서 독일 제국의 주가 되었습니다."
-austria.12.a:0 "Heir dir im Siegeskranz.\n(그대에게 승리의 왕관을 - 독일의 군가)"
+austria.12.a:0 "그대에게 승리의 왕관을.\n"
 
 austria.13.t:0 "프랑스의 최후 통첩"
-austria.13.d:0 "공산주의 프랑스(Commune of France)는 우리에게 최후 통첩을 보냈다. 오스트리아의 신생 신디칼리즘주에 대한 우리의 정책을 계속 추진한다면 그들은 신생주들를 원조할 의무가 있다고 밝혔다. 우리는 어떻게이 무례한 것에 반응해야 합니까?"
+austria.13.d:0 "프랑스 코뮌은 우리에게 최후 통첩을 보냈다. 오스트리아의 신생 신디칼리즘주에 대한 우리의 정책을 계속 추진한다면 그들은 신생주들를 원조할 의무가 있다고 밝혔다. 우리는 어떻게이 무례한 것에 반응해야 합니까?"
 austria.13.a:0 "우리는 프랑스와 전쟁하기를 원하지 않는다."
 austria.13.b:0 "무시해."
 
@@ -612,8 +612,8 @@ austria.27.t:0 "민족 분쟁이 확대됨"
 austria.27.d:0 "오늘날 헝가리 시민은 경비원들에게 소리를 지르며 오스트리아 군대에 몰려 들었다. 그들은 우리 군대에 압도 당했고 체포되었습니다. 다행히 이 사건 중에 아무도 피해를 입지 않았습니다. 상황이 악화되기 전에 이러한 상황을 개선해야합니다."
 austria.27.a:0 "우리는 이것을 통제하에 두어야한다..."
 
-austria.28.t:0 "Miklos Horthy"
-austria.28.d:0 "이중제국의 헝가리에서 1868 년에 태어난 Miklos Horthy는 세계대전 동안 제국의 해군에서 복무했고, 제독으로 승진했습니다. 그는 과거 훌룡한 군인이였지만, 최근 개편된 지역에서 그는 헝가리 해방 운동에서 두드러진 역할을 한 것으로 보입니다."
+austria.28.t:0 "미클로스 호르티"
+austria.28.d:0 "이중제국의 헝가리에서 1868 년에 태어난 미클로스 호르티는 세계대전 동안 제국의 해군에서 복무했고, 제독으로 승진했습니다. 그는 과거 훌룡한 군인이였지만, 최근 개편된 지역에서 그는 헝가리 해방 운동에서 두드러진 역할을 한 것으로 보입니다."
 austria.28.a:0 "이것은 좋지 않다."
 
 austria.29.t:0 "해방운동의 확대"
@@ -676,7 +676,7 @@ austria.105.a:0 "그들을 지원해라."
 austria.105.b:0 "그들은 스스로 할 수 있것이다."
 
 austria.106.t:0 "오스트리아 도움"
-austria.106.d:0 "오늘날 오스트리아의 도움이 우리 땅에 도착했습니다. 그들은 적을 물리 치기 위해 우리에게 군대와 무기를 보냈습니다."
+austria.106.d:0 "오늘, 오스트리아의 도움이 우리 땅에 도착했습니다. 그들은 적을 물리 치기 위해 우리에게 군대와 무기를 보냈습니다."
 austria.106.a:0 "하나님 감사합니다."
 
 
