--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -83,11 +83,11 @@ worldnews.20.t:0 "미국 민주주의의 종식"
 worldnews.20.d:0 "놀라운 뉴스가 오늘 미국에서 도착했습니다. 분열된 국가를 안정시키지 못하고 CSA와 AFP 무장 세력을 진정시킬 수 없다는 것을 증명한 하버드 후버 대통령의 정부는 더글라스 맥아더 장군에게 군부와 기업 대표들과 함께이 나라의 고삐를 맡을 것을 요청했습니다. \n\n 맥아더 대통령은 '철권 통치'의 강력한 지지자이며 생디칼리즘과 미국 평화주의에 반대합니다. '미국의 적'에 대한 대규모 단속은 이미 보고된바 있습니다."
 worldnews.20.a:0 "골치아프군."
 
-worldnews.21.t:0 "휴이 롱(Huey Long)가 미국 대통령으로 선출되었습니다"
+worldnews.21.t:0 "휴이 롱이 미국 대통령으로 선출되었습니다"
 worldnews.21.d:0 "1925년 대공황이래 미국 전역에 만연한 대규모 불안정에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 미주연합의 휴이롱은 32 대 미국 대통령이 되었습니다. \n\n휴이 롱은 루이지애나에서 성공한 주지사로 유명하지만, 민중주의 정책과 정치인들과 싸우기 위한 준 군사적인 민병대의 사용에 대해 많은 비판을 받았습니다. 아메리카 노조 연맹은 롱이 선거 결과를 조작했다고 주장하면서 선거 결과에 대해서 이의를 제기하고 있습니다."
 worldnews.21.a:0 "남부인이 대통령으로서 무엇을 할 수 있을지 보자."
 
-worldnews.22.t:0 "잭 리드(Jack Reed)가 미국 대통령으로 선출되었습니다"
+worldnews.22.t:0 "잭 리드가 미국 대통령으로 선출되었습니다"
 worldnews.22.d:0 "1925년 대공황이래 미국 전역에 만연한 대규모 불안정에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 아메리카 노조 연맹의 잭 리드는 미국의 32대 대통령이 되었습니다. \n\n잭 리드는 생디칼리즘의 지지자로, 러시아에서 지낼동안 유능한 정치인이 되었습니다. 이런 태도로 인해 미국 사회에서 많은 적을 만들었지만 그가 이끌고있는 노조 연맹은 여전히 강합니다. AFP는 이미 선거 결과에 이의를 제기하고는 있습니다..."
 worldnews.22.a:0 "이 저널리스트가 무엇을 할 수 있을지 보자."
 
@@ -95,27 +95,27 @@ worldnews.23.t:0 "폴란드-리투아니아 연방"
 worldnews.23.d:0 "놀라운 사건이 벌어지면서 폴란드의 빈 자리에 대한 선거는 역사에서 잊혀진 왕국의 복원에 성공했습니다. \n\n오스트리아와 독일의 압력에도 불구하고, 리투아니아의 Mindaugas III von Urach 국왕이 폴란드의 새로운 왕으로 선출되었으며, 폴란드와 리투아니아를 연방으로 다시 연합시키기위한 새로운 헌법 초안이 작성되었습니다. 이 새로운 국가가 안정적 일지는 모르지만 폴란드는 열광적인 것 같습니다."
 worldnews.23.a:0 "예상치 못한 일이다."
 
-worldnews.24.t:0 "오스왈드 모슬리(Oswald Mosley)가 TUC 의장으로 선출되었습니다."
+worldnews.24.t:0 "오스왈드 모슬리가 TUC 의장으로 선출되었습니다."
 worldnews.24.d:0 "1936 년 영국 노동 조합 총회가 결정을 내렸습니다. 오랬동안 TUC 위원장을 지냈던 필립 스노든이 사임을 선언함에 따라, 극단주의자, 자치주의자, 연방주의자 그리고 조합주의자의 연방의 4개 주요 파벌이 후임자에 대한 논쟁을 시작했습니다. \n\n그리고 논란이 가라앉으면서 Maximists의 지도자이자 전체주의 사상가인 오스왈드 모슬리가 새로운 의장으로 임명되었습니다. 모슬리의 당은 강력한 중앙 정부와 경제에 대한 완전한 국가 통제를 지지하고 있으며, 다른 어느 당파보다도 군사 행동과 영국 민족주의에 훨씬 더 유리합니다."
 worldnews.24.d.voted_again:0 "1 년도 채 못되어, [ENG.GetNameDef]의 1936년 노동 조합 총회는, 오랫동안 TUC의 의장으로 지내던 필립 스노든의 사임을 계기로 정치적 침체로 인해 교착 상태에 빠졌습니다. 두 번째 선거가 실시 된 후, 논쟁은 스노든의 후임자로 극단주의자의 지도자이자 전체주의 사상가인 오스왈드 모슬리의 지명과 함께 가라앉았습니다. 모슬리의 당은 강력한 중앙 정부와 경제에 대한 완전한 국가 통제를 지지하고 있으며, 다른 어느 당파보다도 군사 행동과 영국 민족주의에 훨씬 더 유리합니다."
 worldnews.24.a:0 "흥미롭군."
 
-worldnews.25.t:0 "니콜라스 이 글라이스(Niclas y Glais)(토마스 에반 니콜라스)가 TUC 의장으로 선출되었습니다."
+worldnews.25.t:0 "니콜라스 이 글라이스(토마스 에반 니콜라스)가 TUC 의장으로 선출되었습니다."
 worldnews.25.d:0 "1936 년 영국 노동 조합 총회가 결정을 내렸습니다. 오랬동안 TUC 위원장을 지냈던 필립 스노든이 사임을 선언함에 따라, 극단주의자, 자치주의자, 연방주의자 그리고 조합주의자의 연방의 4개 주요 파벌이 후임자에 대한 논쟁을 시작했습니다. \n\n그리고 논란이 가라앉으면서 웨일스의 시인이자 자치주의자의 지도자인 니콜라스가 새 의장으로 선출되었습니다. 자치주의자들은 영국의 분권화를 지지하고 심지어 웨일스및 스코틀랜드 국가에 대한 더 큰 자치권, 심지어 완전한 독립까지도 지지합니다."
 worldnews.25.d.voted_again:0 "1 년도 채 못되어, [ENG.GetNameDef]의 1936년 노동 조합 총회는, 오랫동안 TUC의 의장으로 지내던 필립 스노든의 사임을 계기로 정치적 침체로 인해 교착 상태에 빠졌습니다. 두 번째 선거가 실시 된 후, 논쟁은 스노든의 후임자로 웨일스의 시인이자 자치주의자의 지도자인 니콜라스의 지명과 함께 가라앉았습니다. 자치주의자들은 영국의 분권화를 지지하고 심지어 웨일스및 스코틀랜드 국가에 대한 더 큰 자치권, 심지어 완전한 독립까지도 지지합니다."
 worldnews.25.a:0 "흥미롭군."
 
-worldnews.26.t:0 "애니 케니(Annie Kenney)가 TUC 의장으로 선출되었습니다."
+worldnews.26.t:0 "애니 케니가 TUC 의장으로 선출되었습니다."
 worldnews.26.d:0 "1936 년 영국 노동 조합 총회가 결정을 내렸습니다. 오랬동안 TUC 위원장을 지냈던 필립 스노든이 사임을 선언함에 따라, 극단주의자, 자치주의자, 연방주의자 그리고 조합주의자의 연방의 4개 주요 파벌이 후임자에 대한 논쟁을 시작했습니다. \n\n리고 논란이 가라앉으면서 조합주의자의 지도자인 애니 케니가 새로운 의장으로 선출되었습니다. 케니는 지구상의 소수의 여성 지도자 중 한 명이며 급진적인 페미니즘과 평등주의 대한 그녀의 사상은 이 상황에 적합합니다."
 worldnews.26.d.voted_again:0 "1 년도 채 못되어, [ENG.GetNameDef]의 1936년 노동 조합 총회는, 오랫동안 TUC의 의장으로 지내던 필립 스노든의 사임을 계기로 정치적 침체로 인해 교착 상태에 빠졌습니다. 두 번째 선거가 실시 된 후, 논쟁은 스노든의 후임자로 조합주의자의 지도자인 애니 케니의 지명과 함께 가라앉았습니다.케니는 지구상의 소수의 여성 지도자 중 한 명이며 급진적인 페미니즘과 평등주의 대한 그녀의 사상은 이 상황에 적합합니다."
 worldnews.26.a:0 "흥미롭군."
 
-worldnews.27.t:0 "아서 호너(Arthur Horner)가 TUC 의장으로 선출되었습니다."
+worldnews.27.t:0 "아서 호너가 TUC 의장으로 선출되었습니다."
 worldnews.27.d:0 "1936 년 영국 노동 조합 총회가 결정을 내렸습니다. 오랬동안 TUC 위원장을 지냈던 필립 스노든이 사임을 선언함에 따라, 극단주의자, 자치주의자, 연방주의자 그리고 조합주의자의 연방의 4개 주요 파벌이 후임자에 대한 논쟁을 시작했습니다. \n\n리고 논란이 가라앉으면서 현재 사무총장인 아서 호너가 스노든의 후계자로 지명되었습니다. 그와 그의 연방주의자들은 변화하는 세상에서 유지하기가 점점 더 어려워지고 있는, 현상 유지 정책에 찬성합니다."
 worldnews.27.d.voted_again:0 "1 년도 채 못되어, [ENG.GetNameDef]의 1936년 노동 조합 총회는, 오랫동안 TUC의 의장으로 지내던 필립 스노든의 사임을 계기로 정치적 침체로 인해 교착 상태에 빠졌습니다. 두 번째 선거가 실시 된 후, 논쟁은 스노든의 후임자로 조합주의자의 지도자인 아서 호너의 지명과 함께 가라앉았습니다. 그와 그의 연방주의자들은 변화하는 세상에서 유지하기가 점점 더 어려워지고 있는 현상 유지 정책에 찬성합니다."
 worldnews.27.a:0 "흥미롭군."
 
-worldnews.28.t:0 "에드워드 8세(Edward VIII)의 계승"
+worldnews.28.t:0 "에드워드 8세의 계승"
 worldnews.28.d:0 "조지 5세는 본국을 통치한 대영제국과 아일랜드의 마지막 왕으로, 본국에서 추방되어 캐나다에서 망명생활 중 죽었습니다. 윈저가의 첫번째 왕인 그의 통치동안 영국은 세계대전에서 패배했고 고국을 상실했고, 슬픔과 고통으로 기억 될 것입니다. 왕관은 웨일즈 왕자인 에드워드(Edward)가 물려 받았으며 현재는 에드워드8세로 스스로를 부르고 있습니다. \n\n 에드워드왕은 복수심에 차있고 야심있는 사람이며 마켄지 킹 총리와는 좋은 관계가 아닙니다. 그는 아버지의 복수를 성공시키고 영국 제도를 정복하려는 목표를 위해 살며, 그에 따라 영국의 망명자들 사이에서 인기가 높습니다."
 worldnews.28.a:0 "흥미롭군."
 
