--- a/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
@@ -14,7 +14,7 @@ black.4.t:0 "뱅크런"
 black.4.d:0 "베를린 주식 시장의 붕괴로 당황한 독일 시민들은 자산을 출금시키기 위해 은행에 달려들고 있습니다. 은행은 그러한 액수를 내줄 여유가 없으며 많은 은행들이 붕괴 될 위험에 처해 있습니다. 이 전례없는 금융 위기를 안정시키기 위해 즉각적인 정부 개입을 요구하는 사람들이 많습니다."
 black.4.a:0 "일시적으로 은행을 닫아라."
 black.4.b:0 "개인의 재산을 보장하라."
-black.4.c:0 "아무것도하지 말아라."
+black.4.c:0 "아무것도 하지 말아라."
 black.5.t:0 "검은 일주일(Black week)이 끝나다."
 black.5.d:0 "검은 일주일이라고 알려진 기간의 시작이었던 검은 월요일 다음 날에는 상황이 거의 개선되지 않았습니다. 사람들이 주식이 쓸모 없게되기 전에 급매하려고하자 주식의 폭락이 사상 최고치에 도달했습니다. 이번 주말에 끝났을 때 독일의 주요 경제 전문가와 최고 경영자가 자살을 했고, 시장은 죽었습니다. 독일 정부는 행동해야합니다."
 black.5.a:0 "우리는 경제를 개혁해야한다."
@@ -28,30 +28,30 @@ black.8.t:0 "검은 월요일 이후 6 개월"
 black.8.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
 black.8.a:0 "실업이 조금 늘었다."
 black.9.t:0 "검은 월요일 이후 1 년"
-black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
 black.9.a:0 "경제가 더욱 악화되었다."
 black.10.t:0 "검은 월요일 이후 1 년"
-black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
 black.10.a:0 "경제가 아직 회복되지 않았다 ..."
 black.11.t:0 "검은 월요일 이후 1 년"
-black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
 black.11.a:0 "경제가 조금 회복되었다."
 black.12.t:0 "검은 월요일 이후 2 년"
-black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 됬으며 실업률은 매일 감소하고 있습니다."
+black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 되었으며 실업률은 매일 감소하고 있습니다."
 black.12.a:0 "마침내 경제가 회복되었다!"
 black.13.t:0 "검은 월요일 이후 2 년"
-black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 됬으며 실업률은 매일 감소하고 있습니다."
+black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 되었으며 실업률은 매일 감소하고 있습니다."
 black.13.a:0 "경제는 여전히 나쁘다 ..."
 black.20.t:0 "전쟁이 경제를 살리고있습니다."
-black.20.d:0 "전쟁으로 인해 여러 분야의 산업 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이것은 검은 월요일 충격의 여파를 줄임으로써 경제에 순 긍정적 효과를 가져왔다. 경제가 마침내 되살아날 흔적을 보이고있는 것 같습니다!"
+black.20.d:0 "전쟁으로 인해 여러 분야의 산업 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이것은 검은 월요일 충격의 여파를 줄임으로써 경제에 순 긍정적 효과를 가져왔습니다. 경제가 마침내 되살아날 흔적을 보이고있는 것 같습니다!"
 black.20.a:0 "멋지군!"
 black.21.t:0 "식민지에서의 재정적 어려움"
-black.21.d:0 "상승하는 인플레이션과 결과적으로 독일의 식민지에 대한 국가 지출은 검은 월요일 이전의 세금으로 유지하기에는 너무 커지게되었습니다. 일부 독단적인 정치인들은 세금 인상을 제안하지만, 독일 식민지를 돕기 위해 독일 국민들에게 세금을 부과하는 것은 분명히 현재의 경제 상황에서는 지지받지 못할것입니다. 독일의회의 대부분은 단지 식민지 재산에 대한 제한된 재정 지원을 제안합니다. 우리는 무엇을 해야 할까요?"
+black.21.d:0 "상승하는 인플레이션과 결과적으로 독일의 식민지에 대한 국가 지출은 검은 월요일 이전의 세금으로 유지하기에는 너무 커지게 되었습니다. 일부 독단적인 정치인들은 세금 인상을 제안하지만, 독일 식민지를 돕기 위해 독일 국민들에게 세금을 부과하는 것은 분명히 현재의 경제 상황에서는 지지받지 못할 것입니다. 독일의회의 대부분은 단지 식민지 재산에 대한 제한된 재정 지원을 제안합니다. 우리는 무엇을 해야 할까요?"
 black.21.a:0 "식민지의 요구를 충족시키기 위해 세금을 올려라."
 black.21.b:0 "직접적인 통제하에 있는 식민지들에게만 경제적 지원을 해라."
-black.21.c:0 "더이상의 지출은 않된다. 그들은 다른 수입원을 찾아야 할 것이다."
+black.21.c:0 "더이상의 지출은 안 된다. 그들은 다른 수입원을 찾아야 할 것이다."
 black.22.t:0 "주요 은행 파산 선언"
-black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니 개입을 피해야합니까?"
+black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니면 개입을 피해야합니까?"
 black.22.a:0 "아무것도하지 말아라."
 black.22.b:0 "우리의 시민들을 도와주어라!"
 black.23.t:0 "주요 산업 회사 파산 선언"
