--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -106,109 +106,109 @@ FRA_military_academy_idea:0 "사관학교"
 FRA_military_academy_idea_desc:0 "우리는 세계대전이 우리의 반동적인 사관 학교의 대부분을 몰락으로 이끌었다는 가혹한 현실에 직면해야합니다. 일부 사람들은 용인할 수 있는 상태라고 주장하지만, 우리는 더 나아가야합니다. 새로운 육군 사관 학교에 투자하여 숙련 된 장교를 훈련시켜 코뮌의 군대의 미래를 준비하십시오."
 
 FRA_centralized_hc_idea:0 "중앙 집권 사령부"
-FRA_centralized_hc_idea_desc:0 "The new Communal Army was not built like the old French army, many Communards resenting the military administration that tried to stifle the Commune, but we cannot leave our Officer Corps shattered. Let us centralise our High Command again, to better organise things some people like to forget, like logistics."
+FRA_centralized_hc_idea_desc:0 "새로운 코뮌의 육군은 구 프랑스 군대처럼 창설되지 않았습니다. 따라서 많은 코뮌 지지자들은 코뮌을 억압하기 위해 노력한 군사행정에 분노했지만 우리는 우리의 장교 집단이 붕괴되는걸 방치 할 수 없습니다. 우리는 최고 사령부들 다시 만들 것입니다. 이 조취는 보급같은 일부사람들이 잊기 쉬운 부분을 조직하는데 더 도움이 될 것입니다."
 
 FRA_tank_quality_line_idea:0 "고품질 탱크 생산"
-FRA_tank_quality_line_idea_desc:0 "탱크가 적 탱크처럼 잘 작동하지 않는다면 탱크는 무슨 소용입니까? 우리는 수량에 집중하여 품질을 희생해서는 안되며,희생된다면 탱크들은 전쟁터에서 불타는 껍데기가 될 것입니다. 고품질 탱크는 숫자가 적을지라도 더 많은 일을 할것이므로 공격에서 무사히 돌아올 수 있을것입니다."
+FRA_tank_quality_line_idea_desc:0 "탱크가 적 탱크처럼 잘 싸우지 못한다면 탱크가 무슨 소용입니까? 우리는 수량에 집중하여 품질을 희생해서는 안되며,희생된다면 탱크들은 전쟁터에서 불타는 껍데기가 될 것입니다. 고품질 탱크는 숫자가 적을지라도 더 많은 일을 할것이므로 공격에서 무사히 돌아올 수 있을것입니다."
 
 FRA_tank_assembly_line_idea:0 "탱크 조립 라인"
-FRA_tank_assembly_line_idea_desc:0 "What good is a tank if the enemies have many more to throw against us? We cannot let perfectionists sabotage our assembly lines for minimal gains, or else we will be outnumbered. Quantity will allow us to overwhelm our enemies with entire divisions of cold hard steel, and many more shells flying at them."
+FRA_tank_assembly_line_idea_desc:0 "많은 적들이 우리에 대항해서 싸우고 있을 때, 무엇이 좋은 탱크일까요? 우리는 완벽주의자들의 작은 이익 때문에 우리의 생산라인이 사보타주 당할 수는 없습니다. 따라서 우리는 많은 수의 전차를 생산해야 합니다. 양은 강철 사단들이 많은 포탄을 적에게 날려, 적의 군대를 압도하는 것을 가능하게 할 것 입니다."   
 
 FRA_fast_army_idea:0 "속도 숭배"
-FRA_fast_army_idea_desc:0 "Speed is more than a small advantage or a way to get to the next point faster. Speed is integral to warfare. Those who think that the next Weltkrieg will be fought in trenches are deluded at best, mobile warfare is the way of the future. We must capitalise on fast, motorised divisions, if not a motorised army."
+FRA_fast_army_idea_desc:0 "속도는 단순히 다른 지점으로 더 빨리 가는 것만이 아닙니다. 속도는 전쟁의 모든 것입니다. 다음 대 전쟁이 참호 속에서 싸운다고 생각하는 것은 어리석은  생각이고, 기동전이 전쟁의 미래가 될 것입니다. 우리가 만약 기계화된 군대가 아니라면, 우리는 빠른 속도를 가진 기계화 사단을 이용해야 합니다."  
 
 Capital_Ship_Primacy:0 "주력함 우선"
-Capital_Ship_Primacy_desc:0 "A grand navy will be crucial to defeat the Kriegsmarine and bring the pain to Germany's northern coast. And in that role, the grand Battleship still shines. Its naval artillery will flatten the reactionaries with rolling barrages of thunder and steel, and send their boats to the bottom of the sea."
+Capital_Ship_Primacy_desc:0 "대 해군은 황제의 해군을 격파하고, 독일 북부지역을 해방하는데 결정적인 역할을 할 겁니다. 그리고 그러한 과정에서, 전함은 아직도 중요합니다. 해군의 거포들은 천둥과 강철을 반동분자들에게 쏟아 부어서 그들의 배를 바다 아래로 보낼 것 입니다."
 
 Carrier_Primacy:0 "항공모함 우선"
-Carrier_Primacy_desc:0 "The future of naval warfare is not in big, clunky warships, but in a combined arms approach with another front of future warfare, air warfare. Let us ensure that every naval group has a Carrier. Its fighters will ensure global air dominance, its naval bombers will wreck enemy ships and harbours alike."
+Carrier_Primacy_desc:0 "해군의 미래는 그렇게 크고 투박한 해군이 아니라, 다른 미래의 전선인 공중전과 결합하는 것에 있습니다. 으리는 모든 해군들이 항공모함을 가지는 것을 최대한 보장해야 합니다. 그 항공기들은 세계의 하늘을 장악하는 것을 보장하며, 적의 항구와 함선을 모두 날릴 것 입니다."
 
 FRA_working_women_idea:0 "여성 노동자"
 FRA_working_women_idea_desc:0 "너무 오랫동안 반동적 사상가들에 의해 여성들이 억압 당했다. 프랑스 공화국 아래에서 형제들이 도살되는 동안 그들은 사심없이 국가를 지원했습니다. 우리는 그들이 사회에 기여한 것을 인식하고, 평화와 전쟁에서 일하는 여성의 권리를 공식화해야 할 때입니다."
 
 OTT_jihad_internationale:0 "인터네셔널에 대한 성전"
-OTT_jihad_internationale_desc:0 "The godless Syndicalists have not only attacked us, but they are also attacking the Muslim World! By attempting to sway our brothers with their rhetoric, they offend the words of the Prophet. The Sultan calls for a Jihad, let all hear the head of the Muslim faith and answer in arms!"
+OTT_jihad_internationale_desc:0 "무신론자들인 생디칼리스트들이 우리를 침략했을 뿐만이 아니라, 그들의 말장난을 통해 우리의 형제를 흔들리게 하는 시도를 하여, 무슬림 전체를 공격하고, 선지자의 말을 모욕하고 있습니다. 술탄께서 지하드을 선언했으며 모든 무슬림들은 머리로 듣고 무기로 대답해야 합니다."
 
 FRA_bhartiya_support:0 "프랑스 군수 지원"
-FRA_bhartiya_support_desc:0 "We are receiving military support from our French allies. This selfless assistance will prove critical to defeating the reactionary Princely Federation and the imperialist Dominion of India. In time, we hope to repay France for their help, but for now we must focus on the task at hand."
+FRA_bhartiya_support_desc:0 "우리는 우리의 동맹인 프랑스로부터 군사적 지원을 받고 있습니다. 이러한 사심 없는 지원은 반동적인 왕자 연맹과 인도 자치령의 제국주의자를 패배시키는데 중요 할 것입니다. 훗날 우리는 그들의 도움을 반드시 갚을 것 입니다. 그러나 지금은 당면과제에 집중해야 합니다."
 
 FRA_army_mutiny:0 "군대 폭동"
-FRA_army_mutiny_desc:0 "The failure of the coup attempt by Gamelin has thrown the entire army into total disarray. Soldiers keep an eye behind their back even on the squad level, and purges are being operated to ensure no more Syndicalists wield any power in the army. This makes our army a total mess for the time being."
+FRA_army_mutiny_desc:0 "가믈랭에 의한 군대의 쿠데타 실패는 군대 전체를 총제적 혼란에 빠트렸습니다. 병사들은 분대 단위에서마저도 그들의 뒤를 두려워합니다. 숙청은 군대에 생디칼리스트들이 영향을 주지 못하도록 실행했고, 이러한 숙청은 우리군대를 당분간 난잡하게 만들 것입니다."
 
 FRA_amenagement_idea:0 "영토 계획"
 FRA_amenagement_idea_desc:0 "프랑스는 역사적으로 매우 중앙 집중화 된 국가였으며, 개발의 대부분은 산업 도시와 인구 중심지에 국한되어있었습니다. 우리는 우리 지역의 모든 부분이 만족스러운 방식으로 개발되도록하기 위해 대규모 프로젝트에 자금을 지원했습니다."
 
 FRA_plan_prost_idea:0 "프로스트(Prost)의 계획"
-FRA_plan_prost_idea_desc:0 "Henri Prost's plans for highways linking the Paris suburbs has proved to be popular across the country. Many other municipalities like Lyon or Marseille have also signed up to the plan, and projects are already being drawn for a large highway network linking all of France's major cities together, from Lille to Toulouse."
+FRA_plan_prost_idea_desc:0 "파리 교외를 고속도로로 연결하기 위한 핸리 프로스트의 계획은 국가 전역에서 인기가 높습니다. 리옹이나 마르세유 같은 다른 지역의 도시들도 이 계획에 서명했으며, 따라서 이미 이 계획은 툴루즈에 이르는 프랑스의 모든 주요 도시들을 연결시키는 거대한 고속도로 네트워크 계획이 되었습니다."
 
 FRA_paramilitary_gendarmes:0 "준 군사적 헌병"
-FRA_paramilitary_gendarmes_desc:0 "The Gendarmes are a fine organisation, a paramilitary police force capable of both civilian and military activities. While many have pushed to completely disband them, we will instead expand their activities to make them a parallel force to the French Communal Police."
+FRA_paramilitary_gendarmes_desc:0 "헌병대은 잘 조직되고, 민간 부분부터 군사 부분까지 관리 할 수 있는 준 군사화 된 경찰들 입니다. 많은 사람들이 이들을 해산해야 한다고 주장하지만, 우리는 그 대신에 공안 위원회와 더불어서 그들의 행동범위를 확장할 것 입니다."
 
 FRA_secret_police:0 "비밀 경찰"
-FRA_secret_police_desc:0 "There are still many enemies of the Commune inside the Commune, sometimes even inside positions of power or within the military. This push for transparency is dangerous, we must instead organise secret police operations to ensure the safety of the French people from internal influences."
+FRA_secret_police_desc:0 "코뮌 안에서 적들은 임약하고 있고, 심지어 이들은 때때로 정치적 권력을 가진 자리나 군대에서 우리를 공격할 준비를 합니다. 따라서 투명성을 외치는 것은 매우 위험하며, 우리는 그 대신에 비밀경찰을 내부의 적으로부터 프랑스 인민들을 보호하기 위하여 조직해야 합니다."
 
 FRA_demo_surete:0 "경찰 민주화"
-FRA_demo_surete_desc:0 "We cannot allow paranoia to lead to the destruction of the fine balance we achieved with the Sûreté Populaire. By democratising the organisation, we will ensure that the French respect the Police not by fear but by an understanding of their actions and goals, and by knowing that they serve them first and foremost."
+FRA_demo_surete_desc:0 "우리는 우리의 공공안전을 망상병자들이 파괴하도록 허용 할 수 없습니다. 대신 조직을 민주화함으로써, 우리는 공포가 아닌 그들의 행동과 목적에 대한 이해로, 그리고 경찰들이 국민들을 먼저 우선시하여 섬긴다는 것을 알게 함으로 프랑스인들이 경찰을 존중하게 할 것입니다."
 
-FRA_hawkish_renseignements:0 "혁명 정보국"
-FRA_hawkish_renseignements_desc:0 "The Renseignements Généraux must ensure our safety from reactionary enemies abroad. Simple counter-espionage is not adequate, we must be ready to spy on enemy countries and support Syndicalist movements across the world. A good offence is the best defence."
+FRA_hawkish_renseignements:0 "일반 정보국"
+FRA_hawkish_renseignements_desc:0 "일반 정보국는 해외의 반동적인 적으로부터 우리의 안정을 보장 할 것입니다. 단순한 방첩으로는 충분하지 않습니다. 우리는 적국을 감시하고 세계 전역의 생디칼리즘 운동을 지원할 준비되어 있어야 합니다. 공격은 최선의 방어이기 때문이죠."
 
 FRA_peace_renseignements:0 "정보 보호"
-FRA_peace_renseignements_desc:0 "The Renseignements Généraux must ensure the safety of our country above all else. Counter-espionage is the centrepiece of an effective national defence, and there are many enemies that wait for a moment of weakness to influence and rile up our population."
+FRA_peace_renseignements_desc:0 "일반 정보부는 우리 국가의 안전을 보호 하는 것을 중요시 해야 합니다. 방첩은 우리들의 약한 순간을 노리고 우리 시민들을 선동하는 적들을 막을 국방의 핵심입니다."
 
 FRA_peaceful_revolution_idea:0 "평화로운 혁명"
-FRA_peaceful_revolution_idea_desc:0 "The International Syndicalist Revolution will come, but it will be civilised. With the main reactionary powers in Europe finally shattered and their workers liberated, we aim to encourage further uprisings by merely proving the superiority of Syndicalism to the whole world."
+FRA_peaceful_revolution_idea_desc:0 "국제 생디칼리즘 혁명은 올 것입니다. 그러나 그것은 평화로운 방식이 될 것입니다. 유럽의 강력한 반동분자들은 마침내 사라졌고, 그들의 노동자들은 압제로부터 해방되었습니다. 따라서 우리는 세계에 생디칼리즘의 우월성을 입증하는 것으로도 충분히 봉기를 촉진시킬 수 있을 것입니다."
 
 FRA_amateur_pilots_idea:0 "아마추어 조종사"
-FRA_amateur_pilots_idea_desc:0 "There are many in our country that have taken up flying as a hobby or a vocation, but not all of them pursue careers in the Air Force. They should preferably be drafted to our airforce, where their skills will increase our chances of finding the new Aces of the Air."
+FRA_amateur_pilots_idea_desc:0 "우리나라에 직업이나 취미로 비행기를 조종하는 사람들은 많지만, 공군에서 경력을 쌓은 사람은 많지 않습니다. 따라서 그들을 우리 공군에 끌어들여야 합니다. 그들의 실력은 우리가 정예 조종사를 찾는 과정에서 항상될 것 입니다."
 
 FRA_ecole_air_idea:0 "공군 사관 학교"
-FRA_ecole_air_idea_desc:0 "Flying is a skill by itself, and flying well in combat conditions is something that you can't just learn overnight. We won't repeat the mistakes of the Weltkrieg and its butcher of novice pilots, we need a large roster of well trained air pilots, and competent officers to lead them."
+FRA_ecole_air_idea_desc:0 "비행기 조종은 그 자체로도 숙련이 필요하며, 비행기를 조종해서 적들과 잘 싸우는 것은 쉽게 배울 수 없는 것 입니다. 우리는 초심자 조종사가 학살당했던 대전쟁의 실수를 반복하지 않을 것이고, 따라서 우리는 잘 훈련된 공군 조종사가 필요하며, 유능한 장교들이 그들을 이끌 것 입니다."
 
 FRA_waves_of_syndicalism_idea:0 "신디칼리즘 해군"
-FRA_waves_of_syndicalism_idea_desc:0 "The Commune's navy is mighty, and its reach is as far as we desire it to be. While we might lack the plentiful, worldwide ports of the French Empire of old, we still aim to have a navy that can intervene to any corner of the world at any time."
+FRA_waves_of_syndicalism_idea_desc:0 "코뮌의 해군은 강하고, 그들은 어디든지 가야 합니다. 비록 구 프랑스 제국이 가진 세계적인 항구는 없지만, 그러함에도 우리의 해군은 세계 구석까지 어느 시간에서든지 개입 할 수 있어야 합니다. "
 
 FRA_colonnes_neptune_idea:0 "The Colonnes de Neptune(해병대)"
-FRA_colonnes_neptune_idea_desc:0 "Our Marine forces will be the final piece to our naval reach. Once the enemy's coasts are ours, we will send our Marines forth, where they will support the invasion of our regular troops with beachheads. Let us train and galvanise them to become the pride of the Communal Navy!"
+FRA_colonnes_neptune_idea_desc:0 "해군의 마지막 목표는 해병대가 적 영토에 상륙하도록 하는 겁니다. 적의 해안이 우리의 것이 되면 해병대가 상륙하여, 아군의 공격을 지원 할 것입니다. 따라서 우리는 그들을 훈련시켜 코뮌 해군의 핵심으로 만들 것 입니다!"
 
 FRA_cut_off_capitalists_idea:0 "자본주의자 처단"
-FRA_cut_off_capitalists_idea_desc:0 "The capitalists still pride themselves of their colonial territories. The fruit of their plunders still flow freely across the high seas. But if we have a say about it, we will ensure the stolen properties of the African, Asian and American workers will not enrich them."
+FRA_cut_off_capitalists_idea_desc:0 "자본주의자들은 자신들의 식민지 통치에 자부심을 가지고 있습니다. 또한 그들이 약탈한 식민지의 과실들은 지금 공해 상에서 자유롭게 지나가죠. 하지만 우리는 아프리카와 아시아, 아메리카 인민들로부터 뺏은 재산들이 그들을 풍요롭게 만들도록 좌시하지 않을 것입니다."
 
 French_revanchism:0 "프랑스의 복수"
-French_revanchism_desc:0 "We have long prepared ourselves for this inevitable war. We have long cast away Pétain and his creed, but this does not mean we will forget what our brothers died for in the Ardennes, in Verdun, in the Chemin des Dames. We will avenge them, and once and for all regain what we deserved for our struggle."
+French_revanchism_desc:0 "우리는 오랜 시간동안 닥쳐올 전쟁에 준비해왔습니다. 또한 우리는 패탱과 그들의 공화국을 알제리로 쫒아 보냈죠. 그러나 이 의미가 우리는 아르덴에서, 베르됭에서, 마른에서 우리의 형제들이 죽은 것을 잊었다는 것은 절대로 아닙니다. 우리는 반드시 복수할 것이며, 최종적으로 우리들이 얻어야 할 것들을 반드시 되찾을 것입니다."
 
 Revolutionary_spirit:0 "혁명의 정신"
-Revolutionary_spirit_desc:0 "The survival and prosperity of the Syndicalist world will only be ensured when the last reactionary bastion is terminated. We must stand ready to mobilise and shatter every reactionary government across the world. One day, the Internationale will extend across all seas and continents!"
+Revolutionary_spirit_desc:0 "생디칼리즘의 번영과 성공은 최후의 반동분자들의 요새까지 절멸되어야만 보장받을 수 있습니다. 우리는 대규모 동원을 준비하고, 이 세상의 모든 반동주의자들을 분쇄해야 합니다. 그 날, 인터내셔널은 모든 대륙과 모든 바다로 뻗어 나갈 것 입니다." 
 
 FRA_socialist_education_idea:0 "사회주의 교육"
-FRA_socialist_education_idea_desc:0 "The education of the youth is one of the greatest goals that a country like the Commune may face. Luckily, the old education system of the Republic was already revolutionary for its day, giving us a good basis for the new one. A socialist education system, focalised on the sciences and arts."
+FRA_socialist_education_idea_desc:0 "아이들에 대한 교육은 코뮌 같은 국가들이 가진 가장 중요한 문제입니다. 운이 좋게도, 과거 공화국 교육 시스템은 지금 시점에서도 혁명적입니다. 이러한 교육 시스템은 과학과 예술에 집중한 사회주의 교육 위한 좋은 기반을 제공 할 것입니다.“
 
 ### Parties ###
 
-FRA_totalist_party:0 "Jacobins/Sorelians"
-FRA_totalist_party_long:0 "Jacobins and Sorelians"
-FRA_radical_socialist_party:0 "Anarchistes"
-FRA_radical_socialist_party_long:0 "Anarchistes"
-FRA_syndicalist_party:0 "Travailleurs"
-FRA_syndicalist_party_long:0 "Travailleurs"
-FRA_social_democrat_party:0 "Sociaux-Démocrates"
-FRA_social_democrat_party_long:0 "Sociaux-Démocrates"
-FRA_social_liberal_party:0 "Sociaux-Libéraux"
-FRA_social_liberal_party_long:0 "Sociaux-Libéraux"
-FRA_market_liberal_party:0 "Libéraux"
-FRA_market_liberal_party_long:0 "Libéraux"
-FRA_social_conservative_party:0 "Conservateurs"
-FRA_social_conservative_party_long:0 "Conservateurs"
-FRA_authoritarian_democrat_party:0 "Réactionnaires"
-FRA_authoritarian_democrat_party_long:0 "Réactionnaires"
-FRA_paternal_autocrat_party:0 "Royalistes"
-FRA_paternal_autocrat_party_long:0 "Royalistes"
-FRA_national_populist_party:0 "Populistes"
-FRA_national_populist_party_long:0 "Populistes"
-FRA_sorelians:0 "Sorelians"
-FRA_jacobins:0 "Jacobins"
+FRA_totalist_party:0 "자코뱅/소렐리안"
+FRA_totalist_party_long:0 "자코뱅과 소렐리안들"
+FRA_radical_socialist_party:0 "아나키스트"
+FRA_radical_socialist_party_long:0 "아나키스트"
+FRA_syndicalist_party:0 "노동당"
+FRA_syndicalist_party_long:0 "노동당"
+FRA_social_democrat_party:0 "사회 민주주의자"
+FRA_social_democrat_party_long:0 "사회 민주주의자"
+FRA_social_liberal_party:0 "사회 자유주의자"
+FRA_social_liberal_party_long:0 "사회 자유주의자"
+FRA_market_liberal_party:0 "자유주의자"
+FRA_market_liberal_party_long:0 "자유주의자"
+FRA_social_conservative_party:0 "보수주의자"
+FRA_social_conservative_party_long:0 "보수주의자"
+FRA_authoritarian_democrat_party:0 "반동주의자"
+FRA_authoritarian_democrat_party_long:0 "반동주의자"
+FRA_paternal_autocrat_party:0 "왕정주의자"
+FRA_paternal_autocrat_party_long:0 "왕정주의자"
+FRA_national_populist_party:0 "표퓰리스트들"
+FRA_national_populist_party_long:0 "표퓰리스트들"
+FRA_sorelians:0 "소렐리안"
+FRA_jacobins:0 "자코뱅"
 FRA_parti_communiste:0 "PCF"
-FRA_parti_communiste_long:0 "Parti Communiste Français"
+FRA_parti_communiste_long:0 "프랑스 공산주의 정당"
 
 ### Flags/Misc ###
 
