--- a/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
@@ -28,19 +28,19 @@ black.8.t:0 "검은 월요일 이후 6 개월"
 black.8.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
 black.8.a:0 "실업이 조금 늘었다."
 black.9.t:0 "검은 월요일 이후 1 년"
-black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
+black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.9.a:0 "경제가 더욱 악화되었다."
 black.10.t:0 "검은 월요일 이후 1 년"
-black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
+black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.10.a:0 "경제가 아직 회복되지 않았다 ..."
 black.11.t:0 "검은 월요일 이후 1 년"
-black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복하는 중입니다."
+black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.11.a:0 "경제가 조금 회복되었다."
 black.12.t:0 "검은 월요일 이후 2 년"
-black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 되었으며 실업률은 매일 감소하고 있습니다."
+black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정화되었으며 실업률은 매일 감소하고 있습니다."
 black.12.a:0 "마침내 경제가 회복되었다!"
 black.13.t:0 "검은 월요일 이후 2 년"
-black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 되었으며 실업률은 매일 감소하고 있습니다."
+black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적화되었으며 실업률은 매일 감소하고 있습니다."
 black.13.a:0 "경제는 여전히 나쁘다 ..."
 black.20.t:0 "전쟁이 경제를 살리고있습니다."
 black.20.d:0 "전쟁으로 인해 여러 분야의 산업 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이것은 검은 월요일 충격의 여파를 줄임으로써 경제에 순 긍정적 효과를 가져왔습니다. 경제가 마침내 되살아날 흔적을 보이고있는 것 같습니다!"
@@ -51,7 +51,7 @@ black.21.a:0 "식민지의 요구를 충족시키기 위해 세금을 올려라.
 black.21.b:0 "직접적인 통제하에 있는 식민지들에게만 경제적 지원을 해라."
 black.21.c:0 "더이상의 지출은 안 된다. 그들은 다른 수입원을 찾아야 할 것이다."
 black.22.t:0 "주요 은행 파산 선언"
-black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니면 개입을 피해야합니까?"
+black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니면 개입을 피해야 합니까?"
 black.22.a:0 "아무것도하지 말아라."
 black.22.b:0 "우리의 시민들을 도와주어라!"
 black.23.t:0 "주요 산업 회사 파산 선언"
